@@ -33,8 +33,9 @@
 
 #include "npruntime_impl.h"
 #include "npruntime_priv.h"
-#include "webkit/api/public/WebDragData.h"
-#include "webkit/api/public/WebRange.h"
+
+#include "WebDragData.h"
+#include "WebRange.h"
 
 #if USE(V8)
 #include "ChromiumDataObject.h"
